--- a/berita/game-online-viral-mahjong-way-3-terpopuler-2025.html
+++ b/berita/game-online-viral-mahjong-way-3-terpopuler-2025.html
@@ -4043,7 +4043,7 @@
               <a href="https://gacorline.xyz/rumahduit">LOGIN</a>
             </li>
             <li>
-              <a class="button button-secondary button-full-width" href=" https://gacorline.xyz/rumahduit">Daftar Gates Of Olympus</a>
+              <a class="button button-secondary button-full-width" href=" https://gacorline.xyz/rumahduit">DAFTAR MAHJONG WAYS 3</a>
             </li>
           </ul>
         </nav>
@@ -4061,10 +4061,10 @@
         <div class="container">
           <div class="column-row align-center-center text-align-center">
             <div class="column-50 column-inline-block two-column">
-              <a class="button button-large button-full-width" href="https://gacorline.xyz/rumahduit"> Login </a>
+              <a class="button button-large button-full-width" href="https://gacorline.xyz/rumahduit"> LOGIN </a>
             </div>
             <div class="column-50 column-inline-block two-column">
-              <a class="button button-large button-secondary button-full-width" href=" https://gacorline.xyz/rumahduit"> Daftar </a>
+              <a class="button button-large button-secondary button-full-width" href=" https://gacorline.xyz/rumahduit"> DAFTAR </a>
             </div>
           </div>
           <br />
@@ -4143,55 +4143,6 @@
 				<p>&nbsp;</p>
 				<p>Demikian ulasan mengenai Mahjong Way 3, game viral yang semakin populer di tahun 2025. Selamat bermain dan semoga beruntung!</p>
 				<p>&nbsp;</p>
-            <p style="text-align: center;">
-              <strong>FAQ</strong>
-            </p>
-            <p>&nbsp;</p>
-            <p>
-              <strong>1. Apa Itu Mahjong Way 3?</strong>
-            </p>
-            <p>
-              <span style="color: #ff6600;">
-                <strong>
-                  <br />
-                </strong>Mahjong Way 3 adalah game bertema mahjong yang menawarkan fitur-fitur menarik seperti cascading reels, Free Spins, dan Multiplier untuk meningkatkan peluang kemenangan. </span>
-            </p>
-            <p>&nbsp;</p>
-            <p>
-              <strong>2. Bagaimana Cara Memainkan Mahjong Way 3?</strong>
-            </p>
-            <p>&nbsp;</p>
-            <p>
-              <span style="color: #ff6600;">Pemain hanya perlu memutar gulungan (spin) dan mencocokkan simbol yang sesuai di garis pembayaran. Jika kombinasi tertentu tercapai, pemain akan mendapatkan kemenangan.</span>
-            </p>
-            <p>&nbsp;</p>
-            <p>
-              <strong>3. Apakah Mahjong ga 3 Bisa Dimainkan di HP?</strong>
-            </p>
-            <p>&nbsp;</p>
-            <p>
-              <span style="color: #ff6600;">Ya, Mahjong Way 3 dapat dimainkan di berbagai perangkat termasuk smartphone Android dan iOS.</span>
-            </p>
-            <p>&nbsp;</p>
-            <p>
-              <strong>4. Apakah Mahjong Way 3 Aman untuk Dimainkan?</strong>
-            </p>
-            <p>&nbsp;</p>
-            <p>
-              <span style="color: #ff6600;">Jika dimainkan di platform yang resmi dan terpercaya, game ini aman dan adil karena menggunakan sistem RNG (Random Number Generator) yang memastikan hasil permainan acak.</span>
-            </p>
-            <p>&nbsp;</p>
-            <p>
-              <strong>5. Apakah Mahjong Way 3 Memiliki Fitur Hadiah Besar?</strong>
-            </p>
-            <p>&nbsp;</p>
-            <p>
-              <span style="color: #ff6600;">Meskipun bukan game dengan hadiah progresif, Mahjong Way 3 menawarkan berbagai fitur bonus yang memungkinkan pemain mendapatkan kemenangan besar.</span>
-            </p>
-            <p>&nbsp;</p>
-            <p>Demikian ulasan mengenai Mahjong Way 3, game viral yang semakin populer di tahun 2025. Selamat bermain dan semoga beruntung!</p>
-            <p>&nbsp;</p>
-            <p>&nbsp;</p>
           </div>
         </div>
       </div>
