--- a/berita/game-online-viral-mahjong-way-3-terpopuler-2025.html
+++ b/berita/game-online-viral-mahjong-way-3-terpopuler-2025.html
@@ -185,7 +185,7 @@
               <a href="https://gacorline.xyz/rumahduit">LOGIN</a>
             </li>
             <li>
-              <a class="button button-secondary button-full-width" href=" https://gacorline.xyz/rumahduit">Daftar Gates Of Olympus</a>
+              <a class="button button-secondary button-full-width" href=" https://gacorline.xyz/rumahduit">DAFTAR MAHJONG WAYS</a>
             </li>
           </ul>
         </nav>
@@ -203,10 +203,10 @@
         <div class="container">
           <div class="column-row align-center-center text-align-center">
             <div class="column-50 column-inline-block two-column">
-              <a class="button button-large button-full-width" href="https://gacorline.xyz/rumahduit"> Login </a>
+              <a class="button button-large button-full-width" href="https://gacorline.xyz/rumahduit"> LOGIN </a>
             </div>
             <div class="column-50 column-inline-block two-column">
-              <a class="button button-large button-secondary button-full-width" href=" https://gacorline.xyz/rumahduit"> Daftar </a>
+              <a class="button button-large button-secondary button-full-width" href=" https://gacorline.xyz/rumahduit"> DAFTAR </a>
             </div>
           </div>
           <br />
