--- a/berita/game-online-viral-mahjong-way-3-terpopuler-2025.html
+++ b/berita/game-online-viral-mahjong-way-3-terpopuler-2025.html
@@ -11,6 +11,9 @@
     <link rel="shortcut icon" href="/assets/LOGO-BERITA-5.png" />
     <link rel="icon" href="/assets/LOGO-BERITA-5.png" type="image/png" sizes="16x16" />
     <link href="https://berita5.github.io/berita/game-online-viral-mahjong-way-3-terpopuler-2025.html" rel="dns-prefetch" />
+	  <link rel="alternate" hreflang="id-ID" href="https://berita5.github.io/berita/game-online-viral-mahjong-way-3-terpopuler-2025.html" />
+    <link rel="alternate" hreflang="id" href="https://berita5.github.io/berita/game-online-viral-mahjong-way-3-terpopuler-2025.html" />
+    <link rel="alternate" hreflang="x-default" href="https://berita5.github.io/berita/game-online-viral-mahjong-way-3-terpopuler-2025.html" />	  
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="description" content="Nikmati keseruan game viral mahjong way 3 terpopuler 2025 yang menahadirkan game play terbaik dengan berbagai kemudahan dan keseruan dalam permainan mahjong way." />
